# breeze-main

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.local.yaml  docker-compose.yaml  render.yaml  vector.toml
.envs/: .env.local
.github/: dependabot.yml
.github/workflows/: backend-image.yml  backend.yml  code-quality.yml  frontend.yml  quality-gate.yml
backend/: .dockerignore  .gitignore  Dockerfile.dev  GEMINI.md  celerybeat-schedule.db  http_server.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_windows.txt  start.sh
backend-springboot/: Dockerfile  pom.xml
backend/account/: admin.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
backend/account/migrations/: 0001_initial.py  0002_delete_userotps_remove_user_is_teacher_and_more.py
backend/apps/account/: admin.py  models.py  renderers.py  serializers.py  test_integration.py  tests.py  urls.py  views.py
backend/apps/account/migrations/: 0001_initial.py  0002_delete_userotps_remove_user_is_teacher_and_more.py  0003_user_auth_provider_user_is_online_user_is_superuser_and_more.py  0004_alter_user_avatar.py
backend/apps/core/: admin.py  breeze.py  filters.py  models.py  pagination.py  serializers.py  tasks.py  test_integration.py  tests.py  urls.py  utils.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0003_alter_breezeaccount_last_updated.py  0004_breezeaccount_user.py  0005_alter_percentageinstrument_instrument.py  0007_alter_percentageinstrument_instrument.py  0008_tick_ltq.py  0009_exchanges_created_at_exchanges_updated_at.py  0010_alter_candle_options_and_more.py
backend/apps/core/templates/core/: base.html  main.html
backend/apps/home/management/commands/: initadmin.py  process_data.py
backend/apps/home/templates/: test.html
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  production.py
backend/core/: admin.py  breeze.py  helper.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_percentageinstrument.py  0003_alter_breezeaccount_last_updated.py  0004_breezeaccount_user.py  0005_alter_percentageinstrument_instrument.py  0006_candle_volume.py  0007_alter_percentageinstrument_instrument.py  0008_tick_ltq.py
backend/home/management/commands/: process_data.py
backend/main/: asgi.py  celery.py  const.py  gcsUtils.py  settings.py  urls.py  utils.py  wsgi.py
backend/main/settings/: base.py  local.py  production.py  test.py
backend/scripts/: run_backend.sh  run_celery_beat.sh  run_celery_worker.sh  run_flower.sh  start.sh
backend/scripts/production/: run_backend_migrations.sh  run_backend_prod.sh  run_celery_beat_prod.sh  run_celery_worker_prod.sh  run_flower_prod.sh  run_process_data.sh
charts/breeze-main/: Chart.yaml  values.yaml
charts/breeze-main/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  flower-deployment.yaml  flower-service.yaml  frontend-deployment.yaml  frontend-service.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
frontend/: .dockerignore  .env.production  .prettierignore  .prettierrc  Dockerfile.dev  GEMINI.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  common-functions.ts  common-types.ts  index.css  main.tsx
frontend/src/app/: store.ts
frontend/src/components/: AnnouncementBanner.tsx  BreezeStatusCard.tsx  ChartControls.tsx  CreateBreeze.tsx  GraphHeader.tsx  IndicatorChart.tsx  Instrument.tsx  InstrumentCard.tsx  LoadingScreen.tsx  Login.tsx  MainChart.tsx  Navbar.tsx  Registration.tsx  ResponsiveSidebar.tsx  ToastContainer.tsx  VolumeChart.tsx  theme-provider.tsx
frontend/src/features/: authSlice.ts  darkModeSlice.ts
frontend/src/hooks/: use-toast.ts  useResizeObserver.ts
frontend/src/lib/: chart-utils.ts  indicators.ts
frontend/src/pages/: AboutPage.tsx  AccountsPage.tsx  ContactPage.tsx  DashBoardPage.tsx  GraphsPage.tsx  HomePage.tsx  InstrumentsPage.tsx  LoginRegPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  TradingViewPage.tsx
frontend/src/services/: LocalStorageService.tsx  baseApi.ts  baseApi.tsx  breezeServices.tsx  instrumentService.tsx  userAuthService.tsx
frontend/src/test/: setup.ts  (+1 more)
nginx/: default.conf
(+166 files in other folders)
